# ITC-DR-Analysis

./: .gitignore  CMakeLists.txt  README.md
cmake/: Dependencies.cmake
docs/: itc-dr-analysis.drawio
src/: CMakeLists.txt
src/app/: Config.cpp  Config.hpp  main.cpp
src/core/: Quaternion.cpp  Quaternion.hpp
src/filters/: IFilter.hpp
src/sensors/: GPSData.cpp  GPSData.hpp
src/utils/: Constants.hpp
tests/: CMakeLists.txt
tests/unit/core/: QuaternionTests.cpp
tests/unit/sensors/: GPSDataTests.cpp  IMUDataTests.cpp  SensorDataTests.cpp
